fix(menu-button): fix multible button alignment (#1849)

--- a/src/less/combobox/combobox.less
+++ b/src/less/combobox/combobox.less
@@ -27,12 +27,12 @@ span.combobox {
     width: 100%;
 }
 
-.combobox__options--reverse[role="listbox"] {
-    right: 0;
-}
-
 .combobox__listbox {
     .dropdown-base(combobox-listbox);
+}
+
+.combobox__listbox--reverse {
+    .dropdown-reverse(combobox-listbox-reverse);
 }
 
 .combobox__option[role^="option"] {
